# system-design-course

./: .coderabbit.yaml  .gitignore  .markdownlint-cli2.yaml  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .vale.ini  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  course
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_WORKFLOW.md
01 EC2 Basics Lab/: README.md
01 Horizontal Scalability Demo/: COMPLETE_WORKSHOP_GUIDE.md  WORKSHOP_GUIDE.md
01-introduction-horizontal-scalability/: COMPLETE_WORKSHOP_GUIDE.md  README.md  STEP_BY_STEP_WORKSHOP.md  WORKSHOP_GUIDE.md  complete-workshop.sh  deactivate.sh  ecs  quick-start.sh  requirements.txt  setup-minimal.sh
02 HAProxy Load Balancing Demo/: README.md
02-compute-ec2-basics/: README.md
03 DNS and BIND Lab/: README.md
03-load-balancing-haproxy/: README.md  cleanup.sh  setup.sh
04 Keycloak OAuth Lab/: README.md  app.py
04-dns-dig-bind9/: README.md
05-distributed-systems-high-availability/: README.md
06-security-https-oauth2-keycloak/: README.md  app.py
07-networking/: Dockerfile.laptop  Dockerfile.server  README.md  cleanup.sh  docker-compose.yml  setup.sh
08-cloud-networking-vpc/: README.md
08-distributed-file-systems/: README.md
09-databases/: README.md
09-distributed-file-systems/: LAB.md  README.md  cleanup.sh  setup.sh
10-caching-cdn/: README.md
10-databases/: README.md
11-caching/: LAB-MACOS.md  LAB-WINDOWS.md  README.md  cleanup.ps1  cleanup.sh  docker-compose.yml  setup.ps1  setup.sh
11-caching/cpp/: CMakeLists.txt  Dockerfile  cache_lab.cpp
(+80 files in other folders)
